# gpt-oss-20b-redteam

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run_redteam.ps1  win_hackathon.py
competition_submission/: finding_1.json  finding_2.json  finding_3.json  finding_4.json  finding_5.json  reproduction.ipynb  writeup.md
config/: providers.example.yaml  settings.example.yaml  settings.yaml
examples/: example-harmony-findings.json
findings_templates/: findings.schema.json
hackathon_submissions/: finding_1.json  finding_2.json  finding_3.json  finding_4.json  finding_5.json  reproduction.ipynb  writeup.md
notebooks/: 01_reproduce_findings.ipynb
prompt_banks/: safe_templates.md
src/gpt_oss_redteam/: __init__.py  cli.py  config.py  logging_setup.py
src/gpt_oss_redteam/eval/: __init__.py  converters.py  heuristics.py  metrics.py  reporting.py  summaries.py
src/gpt_oss_redteam/model/: __init__.py  backends.py  prompts.py  sampling.py
src/gpt_oss_redteam/probes/: __init__.py  base.py  registry.py
src/gpt_oss_redteam/probes/categories/: cot_issues.py  data_exfiltration.py  deception.py  eval_awareness.py  hidden_motivation.py  reward_hacking.py  sabotage.py  sandbagging.py  tool_misuse.py
src/gpt_oss_redteam/utils/: __init__.py  io.py  seeds.py  time.py
tests/: test_backends.py  test_cli.py  test_converters.py  test_metrics.py  test_probes.py  test_reporting.py
