[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-oss-redteam"
version = "0.1.0"
description = "Red-teaming framework for OpenAI GPT-OSS-20B - Kaggle hackathon"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Red Team", email = "redteam@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "jinja2>=3.1.2",
    "pydantic>=2.0.0",
    "typer[all]>=0.9.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "tenacity>=8.2.0",
    "jsonschema>=4.17.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "black>=23.3.0",
    "mypy>=1.3.0",
    "types-PyYAML",
    "types-tabulate",
    "ipykernel>=6.23.0",
]

[project.scripts]
redteam = "gpt_oss_redteam.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true